# tapis-vert

./: .cursorignore  .cursorrules  .gitignore  LICENSE  README.md
.claude/: CLAUDE.md
.claude/skills/dev/: SKILL.md
.claude/skills/ops/: SKILL.md
.claude/skills/test/: SKILL.md
box/: .env  box.sh  compose.yml
box/cmd/: deploy.sh  dns.sh  hello.sh  ssh.sh  terraform.sh  test.sh  tunnel.sh
box/libs/: verbose.sh
box/opt/: adhoc.sh  admin.sh  deploy.sh  dns.sh  hello.sh  main  ssh.sh  terraform.sh  test.sh  tunnel.sh
box/opt/libs/: verbose.sh
config/: example.env
docs/: README.md  game-rules.md
docs/admin/: README.md
docs/dev-ops/: README.md  api-reference.md  architecture-overview.md  emoji-reactions.md  flask-apps.md  frontend-guide.md  infrastructure.md  redis-orm.md
docs/user/: README.md
services/: .env  compose.yml
services/flask/: config.py
services/flask/app/: __init__.py  routes.py
services/nginx/: nginx.conf  reload.sh
services/nginx/.build/: Dockerfile
services/static/libs/: cookies.js  events.js  tests.js
services/webapp/: README.md
services/webapp/libs/redis-orm/: MANIFEST.in  README.md  pyproject.toml
services/webapp/libs/redis-orm/core/: __init__.py  connection.py  exceptions.py  mixins.py  utils.py
services/webapp/libs/redis-orm/tests/: models.py  run.sh
services/webapp/libs/redis-orm/tests/docker/: Dockerfile  compose.yml  run.sh
services/webapp/libs/redis-orm/tests/tests_py/: __init__.py  conf_test.py  conftest.py  core_test.py  models_test.py
services/websocket/: main.py  managers.py
terraform/: .auto.tfvars  cloud-init.yaml  instances.tf  main.tf  network.tf  variables.tf
(+231 files in other folders)
